# The_International_Rust

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  package-lock.json  package.json  profile.json
javascript/: main.js
js_src/: main.js
old_javascript/: main.js
src/: init.rs  init_setting.rs  init_settings.rs  lib.rs  logging.rs  settings.rs  tick_init.rs
src/constants/: creep.rs  general.rs  global_requests.rs  mod.rs  move_costs.rs  player.rs  room.rs  segments.rs  serialize.rs  spawning.rs  structure.rs
src/creep/: any_creep_ops.rs  creep_functions.rs  creep_move_ops.rs  creep_ops.rs  creep_services.rs  mod.rs  my_creep.rs  my_creep_ops.rs  my_creep_services.rs  owned_creep.rs  owned_creep_ops.rs  role_services.rs
src/creep/roles/: mod.rs  scout_ops.rs  source_harvester_ops.rs
src/debug/: flags.rs
src/international/: collective_ops.rs  construction_site_services.rs  global_request_ops.rs  global_request_services.rs  mod.rs  stat_ops.rs  stat_procs.rs  stat_services.rs
src/international/communication/: mod.rs  simple_allies.rs
src/international/market/: market_ops.rs  mod.rs
src/international/player/: ally_services.rs  enemy_services.rs  mod.rs
src/memory/: ally.rs  creep_memory.rs  enemy.rs  game_memory.rs  global_requests.rs  memory_ops.rs  mod.rs  player.rs  room_memory.rs  stat_memory.rs  static_room_memory.rs  stats.rs
src/other/: neural_network.rs
src/pathfinding/: mod.rs  pathfinder_ops.rs  pathfinding_services.rs  pathfinding_services_multi.rs  pathfinding_services_single.rs  portal_router.rs  portal_router_single.rs  room_costs.rs  room_pather.rs  room_pather_multi.rs  room_pather_single.rs  route_costs.rs
src/room/: commune_planning_ops.rs  logistics_ops.rs  mod.rs  room_ops.rs  room_services.rs
src/room/commune/: commune_ops.rs  commune_services.rs  defense_ops.rs  mod.rs  my_room.rs
src/room/commune/construction/: planning_ops.rs
src/room/commune/spawning/: mod.rs  old.spawn_request_arg_ops.rs  spawn_request_arg_ops.rs  spawn_request_arg_services.rs  spawn_request_ops.rs  spawn_request_services.rs  spawn_services.rs  structs.rs
src/room/remote/: mod.rs  planning_ops.rs
src/state/: commune.rs  creep.rs  game.rs  market.rs  mod.rs  my_creep.rs  room.rs  segments.rs  simple_allies.rs  stats_segment.rs  structure.rs  tick_intervals.rs
src/structures/: mod.rs  structure_ops.rs  structure_services.rs  tower_services.rs
src/utils/: general.rs  mod.rs  pos.rs  serialize.rs  visuals.rs
