cargo-features = ["edition2024"]

[package]
name = "the_international_rust"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
screeps-game-api = "0.21.0"
screeps-game-utils = "0.21.1"
# If you'd like to use a locally-cloned out version of the game API crate
# (for testing PRs, etc), you can use a local path (replacing the above line):
# screeps-game-api = { git = "https://github.com/The-International-Screeps-Bot/screeps-game-api.git" }
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["console"] }
log = { version = "0.4.21", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
regex = "1.10.3"
html-escape = "0.2.13"
room_visual_ext = "0.1.0"
screeps-timing = { git = "https://github.com/Azaril/screeps-timing", optional = true }
screeps-timing-annotate = { git = "https://github.com/Azaril/screeps-timing-annotate", optional = true }
enum-map = "2.7.3"
fastrand = "2.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
# -g - leave debug info in place, allowing for more descriptive stack traces on panic
# --disable-sign-ext - prevents opcodes that the screeps servers can't load (see 
# https://github.com/rustyscreeps/screeps-game-api/issues/391)
wasm-opt = ["-g", "--disable-sign-ext"]

[features]
# default = ["profile"]
profile = ["screeps-timing", "screeps-timing-annotate"]
